--- a/mjpeg/src/main/AndroidManifest.xml
+++ b/mjpeg/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-    <application>
+    <application
+        android:usesCleartextTraffic="true">
         <service
             android:name=".MjpegModuleService"
             android:enabled="true"
