--- a/webrtc/src/main/AndroidManifest.xml
+++ b/webrtc/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <uses-permission android:name="android.permission.TURN_SCREEN_ON" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <application>
+    <application
+        android:usesCleartextTraffic="true">
         <service
             android:name=".WebRtcModuleService"
             android:enabled="true"
