--- a/webrtc/src/main/AndroidManifest.xml
+++ b/webrtc/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name=".RemoteAccessibilityService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
             android:enabled="true"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
